[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "step_npm_plugin"
version = "0.3.1"
authors = [
  { name="Dale Stephenson" },
]
description = "Smallstep CA plugin to Nginx Proxy Manager plugin"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    'requests >= 2.28.1',
    'cryptography >= 38.0.3'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
